level-6-networking/labs/lab-6.4-networkpolicy/00-setup.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    lab: "6.4"
    environment: production
